<resources>
    <string name="messenger_send_button_text">Send</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_tooltip_default">"New! You're in control - choose what info you want to share with apps."</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="add_account">Add account</string>
    <string name="manage_accounts">Manage accounts</string>
    <string name="sign_in">Sign in</string>
    <string name="show_account_list">Show accounts</string>
    <string name="hide_account_list">Hide accounts</string>
    <string name="account_item">Switch to %1$s</string>
    <string name="selected_account">Signed in to %1$s</string>
    <string name="account_list">Account list</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_android_wear_notification_needs_update_text">An application requires an update to the Android Wear app.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_android_wear_update_text">"This app won't run unless you update the Android Wear app."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="commono_google_play_services_api_unavailable_text">This app requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="more_string">+%1$d</string>
    <string name="copy_email">Copy email address</string>
    <string name="copy_number">Copy phone number</string>
    <string name="action_label">Return</string>
    <string name="accessbility_suggestion_dropdown_opened">Contact suggestions opened</string>
    <string name="dropdown_delete_button_desc">Remove %s from recipients</string>
    <string name="chips_action_copy">Copy</string>
    <string name="chips_action_cancel">Cancel</string>
    <string name="chips_permission_text">Allow contacts suggestions</string>
    <string name="mr_system_route_name">System</string>
    <string name="mr_user_route_category_name">Devices</string>
    <string name="mr_media_route_button_content_description">Cast</string>
    <string name="mr_media_route_chooser_title">Connect to device</string>
    <string name="mr_media_route_chooser_searching">Searching for devices…</string>
    <string name="mr_media_route_controller_disconnect">Disconnect</string>
    <string name="mr_media_route_controller_stop">Stop casting</string>
    <string name="mr_media_route_controller_settings_description">Route settings</string>
    <string name="mr_media_route_controller_play">Play</string>
    <string name="mr_media_route_controller_pause">Pause</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="number_one">1.</string>
    <string name="number_two">2.</string>
    <string name="number_three">3.</string>
    <string name="number_four">4.</string>
    <string name="drawer_item_backdrop">Backdrop</string>
    <string name="settings_device_label">DEVICE INFO</string>
    <string name="settings_name_label">Name</string>
    <string name="settings_wifi_label">Wi-Fi</string>
    <string name="settings_time_zone_label">Time Zone</string>
    <string name="settings_time_format_label">Time Format</string>
    <string name="settings_locale_label">Language</string>
    <string name="settings_sounds_label">SOUNDS</string>
    <string name="settings_playback_sounds_label">Playback sounds</string>
    <string name="settings_playback_sounds_description">Cast start and volume changes</string>
    <string name="settings_hdr_label">High dynamic range</string>
    <string name="settings_hdr_description">For AVRs and HiFi systems</string>
    <string name="settings_privacy_label">PRIVACY</string>
    <string name="settings_opencast_label">Guest mode</string>
    <string name="settings_cast_nearby_learn_more">Learn more</string>
    <string name="settings_information_label">INFORMATION</string>
    <string name="send_crash_reports">Send Chromecast usage data and crash reports to Google</string>
    <string name="use_device_id_text">"Send this Chromecast's serial number when checking for updates"</string>
    <string name="preferences_info_title">Information</string>
    <string name="preference_terms_of_service_title">Terms of service</string>
    <string name="preference_privacy_policy_title">Privacy policy</string>
    <string name="preference_open_source_licenses_title">Open source licenses</string>
    <string name="preference_software_version_title">Software version</string>
    <string name="mirror_splash_heading">Mirror your phone or tablet</string>
    <string name="mirror_splash_body">Cast screen / audio enables you to mirror anything on your device to your TV or speakers.</string>
    <string name="mirror_button">Cast screen / audio</string>
    <string name="disconnect_mirror_button">Tap to disconnect</string>
    <string name="mirror_help_link">Visit help center</string>
    <string name="setting_off">Off</string>
    <string name="spinner_loading_text">Loading data…</string>
    <string name="setup_play_sound_button">Play test sound</string>
    <string name="setup_heard_sound_button">I heard it</string>
    <string name="setup_no_sound_button">"I didn't hear it"</string>
    <string name="setup_error_steps">Try these steps…</string>
    <string name="setup_failed_header">"Something's not right…"</string>
    <string name="setup_failed_text1">"You may have accidentally connected to a Chromecast that's not yours. Please ensure that your Chromecast is plugged in and your TV is set to the right input."</string>
    <string name="setup_failed_text2">We recommend not setting up this Chromecast until you can verify the code.</string>
    <string name="ota_error_options_none">None of the above</string>
    <string name="ota_error_audio_option_blink_orange">Blinking orange</string>
    <string name="ota_error_audio_option_blink_white">Blinking white</string>
    <string name="ota_error_audio_option_white">Solid white</string>
    <string name="terms_of_service_url">https://www.google.com/intl/%1$s/policies/terms/</string>
    <string name="server_name_label">Chromecast Server</string>
    <string name="last_setup_failure_label">Last setup failure</string>
    <string name="debug_announcements_title">ANNOUNCEMENTS</string>
    <string name="debug_reset_announcements">Reset Dismissed Announcements</string>
    <string name="debug_announcements_level_title">Release Level</string>
    <string name="debug_ble_title">BLE</string>
    <string name="debug_ble_manual">Enable BLE discovery and setup</string>
    <string name="debug_country">Country</string>
    <string name="email_hint">Type email address here</string>
    <string name="people_picker_help_text">Whose photos do you wish to see?</string>
    <string name="people_picker_show_photos_button_text">Load Albums</string>
</resources>