<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/preferences_info_title">
        <Preference android:title="@string/preference_terms_of_service_title">
            <intent android:action="android.intent.action.VIEW" android:data="@string/terms_of_service_url" />
        </Preference>
        <Preference android:title="@string/preference_privacy_policy_title" android:key="privacy_link" />
        <Preference android:title="@string/preference_open_source_licenses_title">
            <intent android:targetPackage="com.google.android.apps.chromecast.app" android:targetClass="com.google.android.apps.chromecast.app.settings.OpenSourceLicenseActivity" />
        </Preference>
        <Preference android:title="@string/preference_software_version_title" android:key="software_version" style="?android:preferenceInformationStyle" />
    </PreferenceCategory>
</PreferenceScreen>