<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:paddingLeft="@dimen/content_padding" android:paddingRight="@dimen/content_padding" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:id="@id/btn_option_1" android:layout_marginBottom="@dimen/content_padding" android:text="@string/ota_error_audio_option_blink_orange" style="@style/Button.Orange.LargeFixed" />
    <Button android:id="@id/btn_option_2" android:layout_marginBottom="@dimen/content_padding" android:text="@string/ota_error_audio_option_blink_white" style="@style/Button.Orange.LargeFixed" />
    <Button android:id="@id/btn_option_3" android:layout_marginBottom="@dimen/content_padding" android:text="@string/ota_error_audio_option_white" style="@style/Button.Orange.LargeFixed" />
    <Button android:id="@id/btn_option_none" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/content_padding" android:text="@string/ota_error_options_none" style="@style/Button.Flat.White" />
</LinearLayout>